--- a/Lab1/Uninstaller/Uninstaller.csproj
+++ b/Lab1/Uninstaller/Uninstaller.csproj
@@ -11,6 +11,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Update="UninstallForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
   </ItemGroup>
 
@@ -18,4 +24,4 @@
     <ProjectReference Include="..\LicenseCore\LicenseCore.csproj" />
   </ItemGroup>
 
-</Project> 
+</Project>
